Optimised shipment + Console List Retirve APIs